# omnix

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .vercelignore  ARCHITECTURE.md  AZURE_OPENAI_SETUP.md  CHROMA_SETUP.md  CLEAN_MEMORY_SYSTEM.md  CODEBASE_ANALYSIS.md  COMPREHENSIVE_DEVELOPMENT_PLAN.md  CONFIGURATION_GUIDE.md  DEVELOPMENT_TASKS.md  Dockerfile  ELASTICSEARCH_SETUP.md  ENHANCED_TECHNICAL_ROADMAP.md  GCP_DEPLOYMENT_GUIDE.md  GCP_VECTOR_SETUP.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING.md  MCP_API_KEYS_SETUP.md  MCP_INTEGRATION_GUIDE.md  MCP_TEST_PROMPTS.md  MCP_TROUBLESHOOTING.md  NOTION_OAUTH_SETUP.md  README.md  SETUP.md  SETUP_INSTRUCTIONS.md  SOLVE.md  TESTING_GUIDE.md  TODO.md  VECTOR_IMPLEMENTATION_GUIDE.md  VERTEX_AI_VECTOR_SETUP.md  YC_ROADMAP.md  cloud-run.yaml  (+31 more)
.claude/: settings.local.json
.github/workflows/: deploy.yml
adk-service/: .env.example  README.md  SETUP.md  email_tool.py  file_processor.py  firecrawl_tool.py  main.py  multi_agent_adk.py  pyproject.toml  real_adk_agent.py  real_adk_service.py  sample_agents.py  setup_markitdown.bat  setup_markitdown.sh  simple_adk_service.py  simple_agent_service.py  start_adk_service.bat  working_adk_service.py
adk-service/omnix_research_agent/: __init__.py  agent.py  prompt.py
adk-service/omnix_research_agent/sub_agents/: __init__.py  email_sender.py  web_research.py
chroma-venv/: pyvenv.cfg
markitdown-service/: requirements.txt
monitoring/: alerting.yaml  dashboard.json
prisma/: dev.db  schema.prisma
prisma/prisma/: dev.db
public/: manifest.json  sw.js
scripts/: setup-azure-openai.js  setup-credentials.js  setup-stripe-prices.js
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useAutoRouting.ts  useCodeArtifacts.ts  useCodeDetection.ts  useContextManager.ts  useCostOptimization.ts  useEnhancedStreaming.ts  useModelInfo.ts  usePWA.ts  useStreamingChat.ts
src/lib/: constants.ts  db.ts  env-setup.ts  gcp-storage.ts  mock-api.ts  model-access.ts  stripe.ts  (+4 more)
terraform/: main.tf
test-mcp-files/: data.json  sample.md  test.txt
(+298 files in other folders)
